--- a/views/show.handlebars
+++ b/views/show.handlebars
@@ -1,14 +1,22 @@
-<h1 class="mb-1 restaurant-show-title">{{restaurant.name}}</h1>
+<h1 class="mb-1 restaurant-show-title">{{list.name}}</h1>
+<div class="container">
+  <div class="align-center">
+    <a href="/restaurants/{{list._id}}/edit"><button class="btn btn-link btn-sm">Edit</button></a>
+    <form action="/restaurants/{{list._id}}?_method=DELETE" method="POST">
+      <button type="submit" class="btn btn-danger btn-sm text-white">delete</button>
+    </form>
+  </div>
+</div>
+
 <div class="container">
   <div class="row">
     <div class="col-12 col-md-10 mx-auto">
-
       <p class="mb-1">
         <span class="text-secondary">
           <i class="fas fa-utensils pr-2"></i>
           類別：
         </span>
-        {{restaurant.category}}
+        {{list.category}}
       </p>
 
       <p class="mb-1">
@@ -16,8 +24,8 @@
           <i class="fas fa-map-marker-alt pr-2"></i>
           地址：
         </span>
-        {{restaurant.location}}
-        <a href="{{restaurant.google_map}}" class="text-secondary" target="_blank">
+        {{list.location}}
+        <a href="{{list.google_map}}" class="text-secondary" target="_blank">
           <i class="fas fa-location-arrow pr-2 fa-xs"></i>
         </a>
       </p>
@@ -27,14 +35,15 @@
           <i class="fas fa-mobile-alt pr-2"></i>
           電話：
         </span>
-        {{restaurant.phone}}
+        {{list.phone}}
       </p>
 
       <p class="mb-5">
-        {{restaurant.description}}
+        {{list.description}}
       </p>
 
-      <img class="rounded mx-auto d-block mb-4 w-100" src="{{restaurant.image}}" alt="{{restaurant.name}}" style="max-width: 600px;">
+      <img class="rounded mx-auto d-block mb-4 w-100" src="{{list.image}}" alt="{{list.name}}"
+        style="max-width: 600px;">
     </div>
   </div>
 </div>
